<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="startWebServerService">Web Server running on port number: </string>
    <string name="stopWebServerService">Web Server stopped</string>
    <string name="app_name">AppTest</string>
    <string name="action_settings">Settings</string>
    <string name="title_welcome">Welcome to AppTest</string>
    <string name="signup_progress">Sending data&#8230;</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_not_implemented">Functionality not yet implemented</string>
    <string name="alertDialogTitle">Response</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_quit">Quit</string>
    <string name="btnBeginner_text">Beginner</string>
    <string name="btnIntermediate_text">Intermediate</string>
    <string name="btnAdvanced_text">Advanced</string>
    <string name="btnSettings_text">Settings</string>
    <string name="btnExit_text">Exit</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_beginner">Beginner Mode</string>
    <string name="title_activity_intermediate">Intermediate Mode</string>
    <string name="title_activity_advanced">Advanced Mode</string>
    <string name="title_activity_content_received">Advanced Mode</string>
    <string name="prompt_seclevel">Choose the security level</string>
    <string name="prompt_datatype">Choose the data type</string>
    <string name="prompt_algorithm">Choose the algorithm</string>
    <string name="edt_data_field">Enter text here</string>
    <string name="edt_destination_address">Destination IP address</string>
    <string name="edt_destination_port">Destination port number</string>
    <string name="chk_confidentiality">Confidentiality</string>
    <string name="chk_authenticity">Authenticity</string>
    <string name="chk_integrity">Integrity</string>
    <string name="chk_nonrepudiation">Non-Repudiation</string>
    <string name="btn_Send">Send</string>
    <string name="btn_Search_Contact_List">Search contact list</string>
    <string name="tvSend">Send: </string>
    <string name="tvDestinationMode">Target: </string>
    <string name="rb_text_text">Text</string>
    <string name="rb_text_file">File</string>
    <string name="rb_text_manually">Manual</string>
    <string name="rb_text_automatically">Automatic</string>
    <string name="btn_selectFile">Select File</string>
    <string name="chooseafile">Choose a file</string>
    
    <string name="tvSecurity">Security</string>
    <string name="tvConsumption">Consumption</string>
    <string name="tvOverall">Overall</string>
    
    
    

    <string-array name="levels">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
    </string-array>
    <string-array name="datatypes">
        <item>Administrative</item>
        <item>Personal</item>
        <item>Medical</item>
        <item>Professional</item>
        <item>Banking</item>
    </string-array>
    <string-array name="confidenialityAlgorithms">
        <item>AES</item>
        <item>DES</item>
        <item>RSA</item>
    </string-array>
        <string-array name="authenticityAlgorithms">
        <item>MD5WithRSA</item>
        <item>SHA1withRSA</item>
        <item>SHA256withRSA</item>
        <item>SHA384withRSA</item>
        <item>SHA512withRSA</item>
        <item>DSA</item>
        <item>SHA1withDSA</item>
    </string-array>
        <string-array name="integrityAlgorithms">
        <item>MD5</item>
        <item>SHA-1</item>
        <item>SHA-256</item>
        <item>SHA-384</item>
        <item>SHA-512</item>
    </string-array>
        <string name="Hangouts">Hangouts</string>
        <string name="WhatsApp">WhatsApp</string>
        <string name="Facebook">Facebook</string>
        <string name="HTTP">HTTP</string>

</resources>