<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_welcome"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnBeginner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnBeginner_text"
        android:layout_margin="10dp"
        style="@style/btnStyleMainActivity" />

    <Button
        android:id="@+id/btnIntermediate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnIntermediate_text"
        android:layout_margin="10dp"
        style="@style/btnStyleMainActivity" />

    <Button
        android:id="@+id/btnAdvanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnAdvanced_text"
        android:layout_margin="10dp"
        style="@style/btnStyleMainActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btnSettings_text"
            android:layout_margin="10dp"
            style="@style/btnStyleMainActivity" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btnExit_text"
            android:layout_margin="10dp"
            style="@style/btnStyleMainActivity" />
    </LinearLayout>

</LinearLayout>