<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    android:orientation="vertical" >

    <!-- Sign Up progress -->

    <LinearLayout
        android:id="@+id/view_status_Beginner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressBarBeginner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvStatusMessageBeginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/signup_progress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Sign Up form -->

    <ScrollView
        android:id="@+id/view_form_Beginner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/rgDestinationEnterModeBeginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvDestinationEnterModeBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDestinationMode"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/typeManualBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rb_text_manually" />

                <RadioButton
                    android:id="@+id/typeAutomaticBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_text_automatically" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/view_Destination_Manual_Beginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edtDestinationIPBeginner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:hint="@string/edt_destination_address" />

                <EditText
                    android:id="@+id/edtDestinationPortBeginner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:hint="@string/edt_destination_port"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_Destination_Automatic_Beginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:visibility="gone" >

                <Button
                    android:id="@+id/btnAutomaticBeginner"
                    style="@style/btnStyleUserMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_Search_Contact_List" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgDataTypeBeginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvTypeBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvSend"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/typeTextBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rb_text_text" />

                <RadioButton
                    android:id="@+id/typeFileBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_text_file" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/view_Text_Type_Beginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edtDataBeginner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:hint="@string/edt_data_field" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_File_Type_Beginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:visibility="gone" >

                <Button
                    android:id="@+id/btnSelectFileBeginner"
                    style="@style/btnStyleUserMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_selectFile" />

                <TextView
                    android:id="@+id/tvFilePathBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spTypeBeginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/datatypes"
                android:prompt="@string/prompt_datatype"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spLevelBeginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/levels"
                android:prompt="@string/prompt_seclevel"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/btnSendBeginner"
                style="@style/btnStyleUserMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_Send" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/tvSecurityBeginner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tvSecurity"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ImageView
                        android:id="@+id/ivSecurityBeginner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/tvConsumptionBeginner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tvConsumption"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ImageView
                        android:id="@+id/ivConsumptionBeginner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/tvOverallBeginner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tvOverall"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ImageView
                        android:id="@+id/ivOverallBeginner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>